Bug 1329480 - [MSE] Do not reject partial boxes. r=gerald, a=jcristau

Partial content less than 8 bytes long was incorrectly rejected.

We now assume that content is valid unless it is explicitly incorrect (bad box type)

MozReview-Commit-ID: 8L32mNVjzxh